Closed
Bug 586219
Opened 15 years ago
Closed 15 years ago
Title bar is not updated when switching tabs
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | beta4+ |
People
(Reporter: bugzilla, Assigned: neil)
References
Details
Attachments
(1 file)
|
850 bytes,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 5.1; rv:2.0b4pre) Gecko/20100810 Minefield/4.0b4pre
Build Identifier: Mozilla/5.0 (Windows NT 5.1; rv:2.0b4pre) Gecko/20100810 Minefield/4.0b4pre
When switching tabs, the title bar is not updated to change to the tab content's title. It is updated when switching windows.
Reproducible: Always
Steps to Reproduce:
1. Open 2 tabs with different content
2. switch tabs, either by clicking on tab or by keyboard shortcut CTRL+TAB
Actual Results:
The window title is not updated to show the title of the tab's content.
Expected Results:
The title bar should update on tab switch to show the page's title.
Worked in beta 1, doesn't in trunk build 20100810043009.
Happens in safe mode too (no add-on, no persona).
| Reporter | ||
Comment 1•15 years ago
|
||
Works fine in 4.0b3 build 20100805192522.
Works fine in 4.0b4pre build 20100809040505.
Comment 2•15 years ago
|
||
It happens on Windows 7 Classic style also.
Regression window:
Works:
http://hg.mozilla.org/mozilla-central/rev/f26255ffe0c9
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b4pre) Gecko/20100809 Minefield/4.0b4pre ID:20100809191130
Fails:
http://hg.mozilla.org/mozilla-central/rev/a0d6e4d37273
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b4pre) Gecko/20100809 Minefield/4.0b4pre ID:20100809193558
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=f26255ffe0c9&tochange=a0d6e4d37273
Blocks: 574454
Updated•15 years ago
|
Component: General → Widget: Win32
Product: Firefox → Core
QA Contact: general → win32
Updated•15 years ago
|
Status: UNCONFIRMED → NEW
blocking2.0: --- → ?
Ever confirmed: true
Version: unspecified → Other Branch
Updated•15 years ago
|
Version: Other Branch → Trunk
| Assignee | ||
Comment 3•15 years ago
|
||
mNonClientMargins needs to be protected by mCustomNonClient.
This affects all Windows non-custom window non-client title bar updates.
Updated•15 years ago
|
blocking2.0: ? → beta4+
Shouldn't this be "if (mCustomNonClient && mNonClientMargins.top == -1)"?
| Assignee | ||
Comment 5•15 years ago
|
||
No, we only want to execute this code for a custom non-default top margin. So the problem is that we want to bail out early in more cases, not fewer.
Attachment #464824 -
Flags: review?(roc) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Mozilla/5.0 (Windows NT 6.1; rv:2.0b4pre) Gecko/20100814 Minefield/4.0b4pre ID:20100816070744
happen again.
maybe caused by backout, https://bugzilla.mozilla.org/show_bug.cgi?id=575870#c72
reopen ??
You need to log in
before you can comment on or make changes to this bug.
Description
•