Bug 586219: Title bar is not updated when switching tabs. r=roc a=blocker